--- a/Js/JavaScript Drum Kit/style.css
+++ b/Js/JavaScript Drum Kit/style.css
@@ -1,28 +1,27 @@
-html {
-  font-size: 10px;
-  background: url('./background.jpg') bottom center;
-  background-size: cover;
-}
 
 body,html {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: sans-serif;
+}
+h1{
+  text-align: center;
 }
 
 .keys {
   display: flex;
-  flex: 1;
-  min-height: 100vh;
-  align-items: center;
+  flex-wrap: wrap;
+  margin: 10% 0;
   justify-content: center;
+  align-items: center;
 }
 
 .key {
   border: .4rem solid black;
   border-radius: .5rem;
   margin: 1rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 1rem .5rem;
   transition: all .07s ease;
   width: 10rem;
@@ -30,12 +29,14 @@ body,html {
   color: white;
   background: rgba(0,0,0,0.4);
   text-shadow: 0 0 .5rem black;
+  cursor: pointer;
 }
 
 .playing {
   transform: scale(1.1);
   border-color: #ffc600;
   box-shadow: 0 0 1rem #ffc600;
+  transition: all .07s ease;
 }
 
 kbd {
